2011-06-22  Yong Sun <y.yong.sun@oracle.com>

	* po/*.po: updated message translation.

2011-06-22  Lin Ma  <lin.ma@oracle.com>

	* capplet/nwam_rules_dialog.c (dialog_get_window),
	(nwam_pref_init):
	* capplet/nwam_vpn_pref_dialog.c (on_rules_button_clicked): Fixed
	CR#7057684.

2011-04-08  Lin Ma  <lin.ma@oracle.com>

	* configure.in: Bump to 1.164.0

2011-04-01  Lin Ma  <lin.ma@oracle.com>

	* capplet/nwam_profile_dialog.c (nwam_pref_init),
	(dialog_get_window): Fixed 7029953 [gnome2.30][nwam] Cannot edit a
	network profile

2011-03-11  Lin Ma  <lin.ma@oracle.com>

	* configure.in: Bump to 1.162.0

2011-02-28  Lin Ma  <lin.ma@oracle.com>

	* capplet/nwam_env_pref_dialog.c (populate_panels_from_env),
	(on_ns_source_clicked), (on_ns_selection_clicked),
	(on_ns_text_changed), (update_nsswitch_related_widgets), (refresh):
	Rework 7006158, which applies only reload all/cancel an nwam
	location. Fixed 7006036.
	* common/nwamui_env.c (nwamui_object_real_validate):
	Fixed 7006036.

2011-02-26  malin  <malin@solaris>

	* capplet/main.c (main):
	* capplet/nwam_condition_vbox.c (nwam_pref_init):
	* capplet/nwam_conn_conf_ip_panel.c (nwam_pref_init):
	* capplet/nwam_conn_stat_panel.c (nwam_pref_init):
	* capplet/nwam_env_pref_dialog.c (nwam_pref_init),
	(nwam_env_pref_dialog_init), (nwam_env_pref_dialog_finalize),
	(nwam_compose_sortlist_view), (nsswitch_default_clicked_cb),
	(nsswitch_default_file_set), (update_nsswitch_file_widgets),
	(response_cb), (refresh), (apply):
	Work around for 7006158.
	* capplet/nwam_env_svc.c (nwam_pref_init):
	* capplet/nwam_location_dialog.c (nwam_pref_init), (response_cb):
	* capplet/nwam_object_ctrl_iface.c
	(nwam_object_ctrl_iface_class_init):
	* capplet/nwam_pref_dialog.c (nwam_pref_init), (response_cb):
	* capplet/nwam_profile_dialog.c (nwam_pref_init), (response_cb):
	* capplet/nwam_profile_panel.c (nwam_pref_init):
	* capplet/nwam_rules_dialog.c (apply), (nwam_pref_init),
	(response_cb):