@@ -1,3 +1,11 @@
+2011-06-27  Lin Ma  <lin.ma@oracle.com>
+
+	* capplet/nwam_profile_panel.c: (nwam_profile_panel_set_property),
+	(apply), (nwam_profile_panel_finalize),
+	(nwam_object_activate_toggled_cb),
+	(nwam_object_toggled_cell_sensitive_func): Removed #if 0 blocks.
+	* help/C/nwam-manager.xml: Merged CR#7042534.
+
 2011-06-22  Yong Sun <y.yong.sun@oracle.com>
 
 	* po/*.po: updated message translation.
